<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Go4Lunch</string>

    <string name="facebook_application_id" translatable="false">922928809095923</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb922928809095923</string>

    <string name="logo_title">Find a nice restaurant and invite your co-workers for lunch</string>
    <string name="email_login_btn_txt">Sign in with email</string>
    <string name="facebook_login_btn_txt">Sign in with Facebook</string>
    <string name="google_login_btn_txt">Sign in with Google</string>
    <string name="retry_login_btn_txt">Try again</string>
    <string name="login_failed_unknown_error">Login Failed.\nAn error occurred during the authentication process, please try again.</string>

    <string name="search_restaurant_btn_txt">Search for a restaurant</string>
    <string name="sort_menu">Sort restaurants</string>
    <string name="order_by_stars">Best rated</string>
    <string name="order_by_nearest">Nearest</string>
    <string name="order_by_workmates_count">Colleagues most frequented</string>
    <string name="map_menu">Map View</string>
    <string name="restaurant_list_menu">List View</string>
    <string name="colleagues_list_menu">Workmates</string>
    <string name="your_lunch_drawer_nav_btn_txt">YOUR LUNCH</string>
    <string name="settings_drawer_nav_btn_txt">SETTINGS</string>
    <string name="logout_drawer_nav_btn_txt">LOGOUT</string>

    <string name="call_btn_text">CALL</string>
    <string name="like_btn_text">LIKE</string>
    <string name="website_btn_text">WEBSITE</string>
    <string name="error_fetching_place_details">Something went wrong while fetching the data</string>
    <string name="no_colleagues_joining_message">No colleagues joining this restaurant yet</string>
    <string name="no_workplace_selected_message">You haven\'t chosen a workplace yet, thus we can\'t provide the colleagues joining on</string>
    <string name="error_fetching_colleagues_list_message">There has been an error while loading the joining colleagues</string>
    <string name="default_empty_list_message">Something went wrong, we couldn\'t provide this data</string>

    <string name="Restaurant_Name">Restaurant Name</string>
    <string name="chosen_restaurant">Chosen restaurant</string>
    <string name="location_permission_request_txt">Go4Lunch needs to access your Location in order to function</string>
    <string name="location_permission_request_negative_btn_txt">Skip</string>
    <string name="location_permission_request_positive_btn_txt">Continue</string>
    <string name="homepage_search_field_hint">Search for a restaurant…</string>
    <string name="empty_chosen_restaurant">You haven\'t chosen a restaurant yet! Please select one.</string>
    <string name="empty_chosen_restaurant_snackbar_action">Learn more</string>
    <string name="empty_chosen_restaurant_toast">Find a restaurant using the search bar, the map or the list view, and from there select a restaurant by clicking on the \"select\" button</string>
    <string name="your_lunch_toast">You have selected this restaurant for lunch</string>
    <string name="signed_out">You\'ve signed out</string>

    <string name="settings_search">Search</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_account">Account</string>
    <string name="settings_enable_notifications">Enable notifications</string>
    <string name="settings_notifications_summary_on">You will receive notifications</string>
    <string name="settings_notifications_summary_of">You will no longer receive any notification</string>
    <string name="settings_set_lunch_reminder_at">Set Lunch reminder at</string>
    <string name="settings_my_workplace">My workplace</string>
    <string name="settings_delete_my_account">Delete My Account</string>
    <string name="search_radius">Search radius (km)</string>
    <string name="workplace_dialog_toast">Your workplace is saved</string>
    <string name="workplace_dialog_search_hint">Enter your workplace name or address</string>
    <string name="workplace_dialog_tag">Workplace Dialog</string>
    <string name="account_successfully_deleted_msg">Account deleted successfully</string>
    <string name="account_not_deleted_error_msg">Error! A problem occurred. Couldn\'t delete the account</string>

    <string name="notification_channel_name">Lunch Reminder Notification</string>
    <string name="notification_channel_description">This notification will display everyday at lunch time</string>
    <string name="lunch_notification_title">It\'s lunch time</string>
    <string name="lunch_time_notification_msg_userless">It\'s lunch time, enjoy!</string>
    <string name="lunch_time_notification_msg_restaurantless">%1$s, it\'s lunch time.</string>
    <string name="lunch_time_notification_msg_unaccompanied">%1$s, it\'s lunch time, today\'s at %2$s (%3$s), enjoy your own company!</string>
    <string name="lunch_time_notification_msg">%1$s, it\'s lunch time, today\'s at %2$s (%3$s), enjoy with %4$s.</string>
    <string name="colleague_is_joining">%1$s is joining!</string>
    <string name="colleague_has_not_chosen">%1$s hasn\'t decided yet</string>
    <string name="colleague_is_eating_at">%1$s is eating at %2$s</string>
    <string name="restaurant_photo_description">restaurant\'s photo</string>
    <string name="is_open_true">Open</string>
    <string name="is_open_false">Closed</string>
    <string name="restaurant_distance_unavailable">unavailable</string>

    <string name="NoColleagues_msg">Currently, you are the first in your workplace to use this app. Please, share this app with your colleagues to activate this functionality.</string>
    <string name="NoWorkplaceSelected_msg">Please select your workplace. This information is required in order to display the available list of your colleagues.</string>
    <string name="ErrorFetchingColleagues_msg">An error has occurred while fetching the data, please report this bug.</string>
    <string name="select_my_workplace_btn">Select my workplace</string>

    <string name="RestaurantsListFragment_CurrentLocationError_msg">An error occurred while processing your location.</string>
    <string name="RestaurantsListFragment_FailFetchingNearbyRestaurant_msg">A problem occurred while trying to fetch nearby restaurants.</string>
    <string name="RestaurantsListFragment_NoRestaurantFound_msg">No restaurant found around here.</string>
    <string name="workplaceDialog_title">Select your actual workplace</string>
    <string name="workplaceDialog_negativeBtn">Later</string>

    <string name="usernameDialog_title">Enter your name:</string>
    <string name="usernameDialog_positiveBtn">Submit</string>
    <string name="usernameDialog_Toast_invalidInput">Username too short. Please enter a valid username</string>
    <string name="usernameDialog_negativeBtn">Cancel</string>
    <string name="usernameDialog_snackbar">New username canceled. Your current username is %1$s.</string>
    <string name="usernameDialog_snackbar_actionBtn">Add a new username</string>
    <string name="settings_my_username">My username</string>

</resources>